# justicetranscribe

./: .coverage  .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.txt  Makefile  PERFORMANCE_ANALYSIS.md  POLLING_SERVICE_REFACTOR.md  README.md  WHATS_NEW_MODAL_IMPLEMENTATION.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  roadmap.md
backend/: .coverage  .coveragerc  .env.example  Dockerfile  entrypoint.sh  main.py  pyproject.toml  pytest.ini  start.sh  start_worker.sh  worker.py
backend/.allowlist/: allowlist.csv
backend/alembic/: env.py
backend/alembic/versions/: 34a9930bd1f7_add_blob_cleanup_fields_to_.py  758d4879be2e_add_blob_processing_attempt_table.py  INDEX_MIGRATION_GUIDE.md  a8f2c9d5e1b3_add_foreign_key_indexes_for_performance.py  d3ee506fc6d8_.py  de7d26bcb326_.py  ed7aa9a4e0f2_add_has_completed_onboarding_to_users.py
backend/api/: routes.py
backend/app/: auth_models.py  database.py  dependencies.py  logger.py  main.py  models.py  services.py
backend/app/audio/: azure_utils.py  blob_deletion_service.py  process_audio_fully.py  speakers.py  transcription.py  transcription_polling_service.py  utils.py
backend/app/database/: connection.py  interface_functions.py  postgres_database.py  postgres_models.py
backend/app/internal/: admin.py
backend/app/llm/: llm_client.py  llm_client.toml
backend/app/minutes/: llm_calls.py  types.py
backend/app/minutes/templates/: crissa.py  general_style.py  self_critique_crissa.py  short_n_sweet_template.py  templates_metadata.py  utils.py
backend/app/routers/: items.py  users.py
backend/build_utils/: validate_azure_config.py  validate_config.py  validate_langfuse_config.py
backend/evaluation/llm/: use-llm-to-analyse-user-edits.py
backend/evaluation/llm/titles/: fetch-titles.py  generate_titles.py
backend/evaluation/third_party_libraries/: eval_uwotm8_library.py
backend/evaluation/transcription/: compare_transcription_diffs.py  transcription_conversion_tests.py
backend/scripts/: README.md  __init__.py  delete_null_title_meetings.py  fix_missing_migration.py  inspect_meetings.py  user_management.py
backend/shared_utils/: auth.py  settings.py
backend/shared_utils/database/: interface_functions.py  postgres_database.py  postgres_models.py
backend/shared_utils/tests/: test_auth.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: test_allowlist_integration.py  test_langfuse_sanity_check.py
backend/tests/unit/: test_cors_security.py
backend/tests/unit/app/: __init__.py
backend/tests/unit/utils/: test_allowlist.py  test_allowlist_environment.py  test_cors_utils.py  test_dependencies.py  test_email_utils.py  test_exception_handlers.py  test_markdown.py  (+4 more)
backend/utils/: allowlist.py  auth.py  cors_utils.py  dependencies.py  email_utils.py  exception_handlers.py  gov_notify.py  jwt_verification.py  langfuse_models.py  markdown.py  middleware.py  settings.py  test_markdown.py
(+206 files in other folders)
