[tool.ruff]
line-length = 120
target-version = 'py312'
fix = true


[project]
name = "justicetranscribe_backend"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-multipart>=0.0.9",
    "fastapi>=0.112.1",
    "boto3>=1.35.3",
    "sagemaker>=2.229.0",
    "setuptools>=73.0.1",
    "openai>=1.42.0",
    "instructor>=1.4.1",
    "pre-commit>=3.8.0",
    "ffmpeg-python>=0.2.0",
    "aiofiles>=24.1.0",
    "sentry-sdk[fastapi]>=2.24.1",
    "ruff>=0.8.2",
    "aioboto3>=13.2.0",
    "pydub>=0.25.1",
    "breame>=0.1.2",
    "nltk>=3.9.1",
    "sqlmodel>=0.0.22",
    "markdown>=3.7",
    "markupsafe>=3.0.2",
    "notifications-python-client>=10.0.1",
    "langfuse>=2.60.2",
    "html2text>=2024.2.26",
    "commonmark>=0.9.1",
    "cryptography>=44.0.2",
    "litellm>=1.74.3",
    "google-auth>=2.39.0",
    "uwotm8>=0.1.4",
    "deepgram-sdk>=3.11.0",
]

[dependency-groups]
fastapi = [
    "fastapi>=0.112.0",
    "sqlalchemy>=2.0.32",
    "decorator>=5.1.1",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.3",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.31.0",
    "pyjwt>=2.9.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "cryptography>=44.0.2",
]

dev = [
    "bumpversion>=0.6.0",
    "pytest>=8.3.2",
    "pytest-env>=1.1.1",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-asyncio>=0.23.8",
    "ruff==0.8.2",
    "bandit>=1.7.9",
    "detect-secrets>=1.5.0",
    "playwright>=1.45",
    "pytest-playwright>=0.5",
    "diagrams>=0.23.4",
    "ipykernel>=6.29.5",
    "httpx==0.27.2",
    "sentence-transformers>=4.1.0",
    "wandb>=0.19.11",
]

[tool.ruff.format]
exclude = ["data/*"]

[tool.ruff.lint]
select = [
    "A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ARG", "ASYNC", "BLE", "COM", "DJ", "DTZ", "EM", "EXE", "FURB",
    "ICN", "INT", "ISC", "LOG", "NPY", "PD", "PGH", "PIE", "PL",
    "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "SLOT",
    "TCH", "TD", "TID", "TRY", "UP", "YTT"
]
exclude = ["out/*"]
ignore = [
    "COM812", "DJ001", "RET505", "RET508", "PLR0913", "E501", "BLE001", "RET504", "S101",
    "EM102", "TRY301"
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003", "S311"]
"*/tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003"]
"*/tests_playwright/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]